--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,13 @@
   <meta charset="utf-8">
   <title>Angular4Auth</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="container">
+    <app-root></app-root>
+  </div>
 </body>
 </html>
