--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+  <meta content="utf-8" http-equiv="encoding">
   <title>Angular4Auth</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,6 +12,7 @@
 </head>
 <body>
   <div class="container">
+    <h1>This is the root!</h1>
     <app-root></app-root>
   </div>
 </body>
